--- a/Research Project/models implemented.qmd
+++ b/Research Project/models implemented.qmd
@@ -17,7 +17,7 @@ from sklearn.decomposition import PCA
 from sklearn import svm
 from imblearn.over_sampling import ADASYN, SMOTE
 import random
-
+from sklearn.utils.class_weight import compute_class_weight
 
 import statsmodels.api as sm
 
@@ -112,12 +112,24 @@ train_frame = pd.DataFrame(
 )
 
 test_frame = pd.DataFrame(
-    review_orig.loc[~review_orig.index.isin(train_frame.index)]
+    tmp.loc[~tmp.index.isin(train_frame.index)]
 )
 
-test_frame = pd.DataFrame(
-    review_orig[~review_orig['prodSiteID'].isin(train_frame['prodSiteID'].unique())]
-)
+additional_data = review_orig[~review_orig['prodSiteID'].isin(train_frame['prodSiteID'].unique())]
+
+test_frame = pd.concat([test_frame, additional_data], ignore_index=True)
+
+test_frame = test_frame.sample(n=int(.2*len(tmp)))
+
+# test_frame = pd.DataFrame(
+#     review_orig[~review_orig['prodSiteID'].isin(train_frame['prodSiteID'].unique())]
+# )
+```
+
+```{python test}
+
+print(test_frame.shape)
+print(train_frame.shape)
 ```
 
 ```{python DataTransforms}
@@ -555,8 +567,9 @@ Looking the results shown below we can say that:
 # need to divide this into pieces to add figure labels.
 random.seed(123)
 
-knn = KNeighborsClassifier(n_neighbors=3)
-knn.fit(X_train_pca,y_train)
+knn = KNeighborsClassifier(n_neighbors=3, weights='distance')
+
+knn.fit(X_train_smote,y_train_smote)
 y_pred_3 = knn.predict(X_test_pca)
 test_metrics.loc[len(test_metrics)] = {
     'Model':'KNN (k=3)',
@@ -569,7 +582,7 @@ test_metrics.loc[len(test_metrics)] = {
 
 # 5 Neighbors
 knn = KNeighborsClassifier(n_neighbors=5)
-knn.fit(X_train_pca,y_train)
+knn.fit(X_train_smote,y_train_smote)
 y_pred_5 = knn.predict(X_test_pca)
 test_metrics.loc[len(test_metrics)] = {
     'Model':'KNN (k=5)',
@@ -582,7 +595,7 @@ test_metrics.loc[len(test_metrics)] = {
 
 # 7 Neighbors
 knn = KNeighborsClassifier(n_neighbors=7)
-knn.fit(X_train_pca,y_train)
+knn.fit(X_train_smote,y_train_smote)
 y_pred_7 = knn.predict(X_test_pca)
 test_metrics.loc[len(test_metrics)] = {
     'Model':'KNN (k=7)',
@@ -595,7 +608,7 @@ test_metrics.loc[len(test_metrics)] = {
 
 # 9 Neighbors
 knn = KNeighborsClassifier(n_neighbors=9)
-knn.fit(X_train_pca,y_train)
+knn.fit(X_train_smote,y_train_smote)
 y_pred_9 = knn.predict(X_test_pca)
 test_metrics.loc[len(test_metrics)] = {
     'Model':'KNN (k=9)',
